[project]
name = "rmmesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Shouzheng Liu", email = "lshzh.hi@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

# [project.scripts]
# rmmesh = "rmmesh:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
